// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EngagementRecencyPage bar chart props gets x axis props 1`] = `
Object {
  "tickFormatter": [Function],
  "ticks": Array [
    1,
    2,
  ],
}
`;

exports[`EngagementRecencyPage bar chart props renders tooltip content 1`] = `
<Stack>
  <TooltipMetric
    color="#88E2E7"
    description="Never engaged, first email in last 7 days"
    key="new"
    label="New"
    value="50%"
  />
  <TooltipMetric
    color="#50CFDA"
    description="365+ days since last engagement"
    key="uneng"
    label="Never Engaged"
    value="10%"
  />
  <TooltipMetric
    color="#29B9C7"
    description="90-365 days since last engagement"
    key="365d"
    label="Not Recently Engaged"
    value="20%"
  />
  <TooltipMetric
    color="#219EA8"
    description="14-90 days since last engagement"
    key="90d"
    label="Semi Recently Engaged"
    value="30%"
  />
  <TooltipMetric
    color="#1A838B"
    description="0-14 days since last engagement"
    key="14d"
    label="Recently Engaged"
    value="40%"
  />
</Stack>
`;

exports[`EngagementRecencyPage renders correctly 1`] = `
<SignalsPage
  breadcrumbAction={
    Object {
      "component": [Function],
      "content": "Back to Engagement Recency Overview",
      "to": "/signals/engagement",
    }
  }
  facet="sending-domain"
  facetId="test.com"
  title={
    <React.Fragment>
      Engagement Recency
      <InfoTooltip
        content="
  The share over time of your email that has been sent to recipients who most recently
  opened messages or clicked links during several defined time periods.
"
      />
    </React.Fragment>
  }
>
  <Panel>
    <Panel.Section>
      <Grid>
        <Grid.Column
          md={4}
          xs={12}
        >
          <Connect(DateFilter)
            label="Date Range"
          />
        </Grid.Column>
      </Grid>
    </Panel.Section>
  </Panel>
  <Grid>
    <Grid.Column
      md={7}
      sm={12}
    >
      <Panel
        data-id="engagement-recency-cohorts-chart"
      >
        <withRouter(Tabs)
          facet="sending-domain"
          facetId="test.com"
        />
        <Panel.Section>
          <div
            className="LiftTooltip"
          >
            <BarChart
              gap={0.25}
              height={250}
              margin={
                Object {
                  "bottom": 5,
                  "left": 18,
                  "right": 0,
                  "top": 12,
                }
              }
              onClick={[MockFunction]}
              selected="2017-01-02"
              shouldHighlightSelected={true}
              timeSeries={
                Array [
                  Object {
                    "c_total": 1,
                    "date": "2017-01-01",
                  },
                  Object {
                    "c_total": 10,
                    "date": "2017-01-02",
                  },
                ]
              }
              tooltipContent={[Function]}
              tooltipWidth="250px"
              width="99%"
              xAxisProps={
                Object {
                  "tickFormatter": [Function],
                  "ticks": Array [
                    1,
                    2,
                  ],
                }
              }
              xAxisRefLines={Array []}
              xKey="date"
              yAxisProps={
                Object {
                  "domain": Array [
                    0,
                    1,
                  ],
                  "tickFormatter": [Function],
                  "ticks": Array [
                    0,
                    0.25,
                    0.5,
                    0.75,
                    1,
                  ],
                }
              }
              yAxisRefLines={Array []}
              yKey="value"
              yKeys={
                Array [
                  Object {
                    "OGFill": "#1A838B",
                    "OGStroke": "#1A838B",
                    "description": "0-14 days since last engagement",
                    "fill": "#1A838B",
                    "hibanaFill": "#1a497d",
                    "hibanaStroke": "#1a497d",
                    "key": "c_14d",
                    "label": "Recently Engaged",
                    "stroke": "#1A838B",
                  },
                  Object {
                    "OGFill": "#219EA8",
                    "OGStroke": "#219EA8",
                    "description": "14-90 days since last engagement",
                    "fill": "#219EA8",
                    "hibanaFill": "#0060cc",
                    "hibanaStroke": "#0060cc",
                    "key": "c_90d",
                    "label": "Semi Recently Engaged",
                    "stroke": "#219EA8",
                  },
                  Object {
                    "OGFill": "#29B9C7",
                    "OGStroke": "#29B9C7",
                    "description": "90-365 days since last engagement",
                    "fill": "#29B9C7",
                    "hibanaFill": "#1273e6",
                    "hibanaStroke": "#1273e6",
                    "key": "c_365d",
                    "label": "Not Recently Engaged",
                    "stroke": "#29B9C7",
                  },
                  Object {
                    "OGFill": "#50CFDA",
                    "OGStroke": "#50CFDA",
                    "description": "365+ days since last engagement",
                    "fill": "#50CFDA",
                    "hibanaFill": "#429bff",
                    "hibanaStroke": "#429bff",
                    "key": "c_uneng",
                    "label": "Never Engaged",
                    "stroke": "#50CFDA",
                  },
                  Object {
                    "OGFill": "#88E2E7",
                    "OGStroke": "#88E2E7",
                    "description": "Never engaged, first email in last 7 days",
                    "fill": "#88E2E7",
                    "hibanaFill": "#78b6ff",
                    "hibanaStroke": "#78b6ff",
                    "key": "c_new",
                    "label": "New",
                    "stroke": "#88E2E7",
                  },
                ]
              }
              yRange={
                Array [
                  "auto",
                  "auto",
                ]
              }
            />
            <Legend
              items={
                Array [
                  Object {
                    "OGFill": "#88E2E7",
                    "OGStroke": "#88E2E7",
                    "description": "Never engaged, first email in last 7 days",
                    "hibanaFill": "#78b6ff",
                    "hibanaStroke": "#78b6ff",
                    "label": "New",
                  },
                  Object {
                    "OGFill": "#50CFDA",
                    "OGStroke": "#50CFDA",
                    "description": "365+ days since last engagement",
                    "hibanaFill": "#429bff",
                    "hibanaStroke": "#429bff",
                    "label": "Never Engaged",
                  },
                  Object {
                    "OGFill": "#29B9C7",
                    "OGStroke": "#29B9C7",
                    "description": "90-365 days since last engagement",
                    "hibanaFill": "#1273e6",
                    "hibanaStroke": "#1273e6",
                    "label": "Not Recently Engaged",
                  },
                  Object {
                    "OGFill": "#219EA8",
                    "OGStroke": "#219EA8",
                    "description": "14-90 days since last engagement",
                    "hibanaFill": "#0060cc",
                    "hibanaStroke": "#0060cc",
                    "label": "Semi Recently Engaged",
                  },
                  Object {
                    "OGFill": "#1A838B",
                    "OGStroke": "#1A838B",
                    "description": "0-14 days since last engagement",
                    "hibanaFill": "#1a497d",
                    "hibanaStroke": "#1a497d",
                    "label": "Recently Engaged",
                  },
                ]
              }
              tooltipContent={[Function]}
            />
          </div>
        </Panel.Section>
      </Panel>
    </Grid.Column>
    <Grid.Column
      md={5}
      mdOffset={0}
      sm={12}
    >
      <div>
        <Box
          as={[Function]}
        >
          <EngagementRecencyActions
            cohorts={
              Object {
                "c_total": 10,
                "date": "2017-01-02",
              }
            }
            date="2017-01-02"
          />
        </Box>
      </div>
    </Grid.Column>
  </Grid>
</SignalsPage>
`;

exports[`EngagementRecencyPage renders empty correctly 1`] = `
Array [
  <Panel>
    <Panel.Section>
      <Grid>
        <Grid.Column
          md={4}
          xs={12}
        >
          <Connect(DateFilter)
            label="Date Range"
          />
        </Grid.Column>
      </Grid>
    </Panel.Section>
  </Panel>,
  <Panel
    data-id="engagement-recency-cohorts-chart"
  >
    <withRouter(Tabs)
      facet="sending-domain"
      facetId="test.com"
    />
    <Empty
      message="Insufficient data to populate this chart"
    />
  </Panel>,
]
`;

exports[`EngagementRecencyPage renders error correctly 1`] = `
<SignalsPage
  breadcrumbAction={
    Object {
      "component": [Function],
      "content": "Back to Engagement Recency Overview",
      "to": "/signals/engagement",
    }
  }
  facet="sending-domain"
  facetId="test.com"
  title={
    <React.Fragment>
      Engagement Recency
      <InfoTooltip
        content="
  The share over time of your email that has been sent to recipients who most recently
  opened messages or clicked links during several defined time periods.
"
      />
    </React.Fragment>
  }
>
  <Panel>
    <Panel.Section>
      <Grid>
        <Grid.Column
          md={4}
          xs={12}
        >
          <Connect(DateFilter)
            label="Date Range"
          />
        </Grid.Column>
      </Grid>
    </Panel.Section>
  </Panel>
  <Grid>
    <Grid.Column
      md={7}
      sm={12}
    >
      <Panel
        data-id="engagement-recency-cohorts-chart"
      >
        <withRouter(Tabs)
          facet="sending-domain"
          facetId="test.com"
        />
        <Empty
          message="Unable to Load Data"
        />
      </Panel>
    </Grid.Column>
    <Grid.Column
      md={5}
      mdOffset={0}
      sm={12}
    >
      <div />
    </Grid.Column>
  </Grid>
</SignalsPage>
`;

exports[`EngagementRecencyPage renders loading correctly 1`] = `
Array [
  <Panel>
    <Panel.Section>
      <Grid>
        <Grid.Column
          md={4}
          xs={12}
        >
          <Connect(DateFilter)
            label="Date Range"
          />
        </Grid.Column>
      </Grid>
    </Panel.Section>
  </Panel>,
  <Panel
    data-id="engagement-recency-cohorts-chart"
  >
    <withRouter(Tabs)
      facet="sending-domain"
      facetId="test.com"
    />
    <PanelSectionLoading
      height="250px"
      minHeight="400px"
    />
  </Panel>,
]
`;
